run format and linting for all files
