# backend/controllers.js
@@ -1,32 +1,32 @@
 const { getDb, writeToDb } = require('./utils')
 const { SESSIONS } = require('./sessions')
-const crypto = require('crypto');
+const crypto = require('crypto')
 
 const DB_PATH = './db.json'
-const SONG_SEARCH_QUERIES = ['name', 'artist', 'genre', 'album'];
+const SONG_SEARCH_QUERIES = ['name', 'artist', 'genre', 'album']
 
 const login = (req, res) => {
   try {
-    const {email, password} = req.body;
+    const { email, password } = req.body
 
-    if (!email || !password) return res.status(400).send({error: 'Credentials are missing'});
+    if (!email || !password) return res.status(400).send({ error: 'Credentials are missing' })
 
     if (email === 'test@axxes.com' && password === 'test') {
-      const authToken = crypto.randomUUID();
-      SESSIONS.set(authToken);
+      const authToken = crypto.randomUUID()
+      SESSIONS.set(authToken)
 
       return res
         .cookie('authToken', authToken, {
           httpOnly: false,
           secure: true,
-          sameSite: 'none'
+          sameSite: 'none',
         })
-        .send({message: 'login successful'})
+        .send({ message: 'login successful' })
     }
-    res.status(401).send({error: 'Email or password incorrect'})
+    res.status(401).send({ error: 'Email or password incorrect' })
   } catch (error) {
-    console.error(error);
-    res.status(500).send({error: error.message})
+    console.error(error)
+    res.status(500).send({ error: error.message })
   }
 }
 
@@ -38,14 +38,14 @@ const filterAndReturnSongs = (req, res, row) => {
     const db = getDb(DB_PATH)[row]
 
     if (hasNoSearchQueries) {
-      return res.status(200).send(pagination(db, req.query));
+      return res.status(200).send(pagination(db, req.query))
     }
 
-    const filteredSongs = filterSongsOnMultipleQueries(searchQueries, row);
+    const filteredSongs = filterSongsOnMultipleQueries(searchQueries, row)
     res.status(200).send(pagination(filteredSongs, req.query))
   } catch (error) {
-    console.error(error);
-    res.status(500).send({error: error.message})
+    console.error(error)
+    res.status(500).send({ error: error.message })
   }
 }
 
@@ -53,36 +53,37 @@ const pagination = (itemsList, parameters) => {
   const { pageNumber, amountPerPage } = parameters
 
   if (pageNumber && amountPerPage) {
-    const start = Number((pageNumber - 1)) * Number(amountPerPage);
-    const end = Number(start) + Number(amountPerPage);
+    const start = Number(pageNumber - 1) * Number(amountPerPage)
+    const end = Number(start) + Number(amountPerPage)
 
     if (start < 0) throw new Error('pageNumber cannot be lower then 1')
 
     return itemsList.slice(start, end)
   }
-  return itemsList;
+  return itemsList
 }
 
 const modifySavedSongs = (song, res, action) => {
   try {
-    if (!song) return res.status(400).send({error: `no ${action === 'ADD' ? 'song' : 'songId'} provided`})
+    if (!song)
+      return res.status(400).send({ error: `no ${action === 'ADD' ? 'song' : 'songId'} provided` })
 
     const db = getDb(DB_PATH)
 
     switch (action) {
       case 'REMOVE': {
         db.saved = db.saved.filter((el) => el.id !== Number(song))
-        break;
+        break
       }
       case 'ADD': {
         db.saved.push(song)
-        break;
+        break
       }
     }
     writeToDb(DB_PATH, db)
-    return res.status(200).send({message:`${action} song`});
+    return res.status(200).send({ message: `${action} song` })
   } catch (error) {
-    res.status(500).send({error: error.message})
+    res.status(500).send({ error: error.message })
   }
 }
 
@@ -93,13 +94,13 @@ const filterOnSearchParameters = (parameters) => {
 const filterSongsOnMultipleQueries = (searchQueries, row) => {
   return getDb(DB_PATH)[row].filter((song) => {
     return searchQueries.some(([key, value]) => {
-      return song[key]?.toLowerCase().includes(value?.toLowerCase());
-    });
-  });
-};
+      return song[key]?.toLowerCase().includes(value?.toLowerCase())
+    })
+  })
+}
 
 module.exports = {
   modifySavedSongs,
   filterAndReturnSongs,
-  login
+  login,
 }
