# backend/index.js
@@ -1,29 +1,29 @@
-const express = require('express');
-const bodyParser = require('body-parser');
-const cors = require('cors');
-const cookieParser = require('cookie-parser');
+const express = require('express')
+const bodyParser = require('body-parser')
+const cors = require('cors')
+const cookieParser = require('cookie-parser')
 
 const { delay } = require('./utils.js')
 const { checkIfAuthenticated } = require('./validators.js')
 const { filterAndReturnSongs, modifySavedSongs, login } = require('./controllers.js')
 const { SESSIONS } = require('./sessions')
 
-const PORT = 4000;
+const PORT = 4000
 
-const app = express();
-app.use(bodyParser.json());
-app.use(cors({origin: 'http://localhost:3000', credentials: true}));
-app.use(cookieParser());
+const app = express()
+app.use(bodyParser.json())
+app.use(cors({ origin: 'http://localhost:3000', credentials: true }))
+app.use(cookieParser())
 
 app.all('*', (req, res, next) => checkIfAuthenticated(req, res, next, SESSIONS))
 
 app.get('/auth/session', (req, res) => {
-  res.sendStatus(204);
-});
+  res.sendStatus(204)
+})
 
 app.post('/login', (req, res) => {
   login(req, res)
-});
+})
 
 app.get('/songs', async (req, res) => {
   // Don't remove, this is to fake a slow API.
@@ -33,21 +33,21 @@ app.get('/songs', async (req, res) => {
   }
 
   filterAndReturnSongs(req, res, 'songs')
-});
+})
 
 app.get('/saved', async (req, res) => {
   filterAndReturnSongs(req, res, 'saved')
-});
+})
 
 app.post('/saved', async (req, res) => {
   modifySavedSongs(req.body, res, 'ADD')
-});
+})
 
 app.delete('/saved', async (req, res) => {
-  const {songId} = req.query;
+  const { songId } = req.query
   modifySavedSongs(songId, res, 'REMOVE')
-});
+})
 
 app.listen(PORT, () => {
   console.log(`App listening on port ${PORT}`)
-});
+})
