# backend/validators.js
@@ -1,23 +1,23 @@
 const checkIfAuthenticated = (req, res, next, sessions) => {
-  if (req.path === "/login") return next();
+  if (req.path === '/login') return next()
 
-  const authTokenQuery = req.query.authToken;
-  const authTokenCookie = req.cookies.authToken;
+  const authTokenQuery = req.query.authToken
+  const authTokenCookie = req.cookies.authToken
 
   if (sessions.has(authTokenQuery) || sessions.has(authTokenCookie)) {
-    return next();
+    return next()
   }
-  
+
   res
-    .clearCookie("authToken", {
+    .clearCookie('authToken', {
       secure: true,
-      sameSite: "none",
-      path: "/",
+      sameSite: 'none',
+      path: '/',
     })
     .status(401)
-    .send({ error: "You are not authenticated" });
-};
+    .send({ error: 'You are not authenticated' })
+}
 
 module.exports = {
   checkIfAuthenticated,
-};
+}
